@@ -243,7 +243,7 @@ keybind 'KEY' 'COMMAND' ['ARGS ...']::
     first press 'Mod1-Shift-p' and then release 'p'.  Examples:
 
         * keybind Mod4+Ctrl+q quit
-        * keybind Mod1-i toggle always_show_frame
+        * keybind Mod4-Shift-d attr clients.focus.decorated toggle
         * keybind Mod1-Shift-space cycle_layout -1
         * +keybind Release-Mod4-Shift-p spawn scrot+ takes a screenshot when the
           +p+ is released while Mod4 and Shift are still pressed.
