@@ -24,6 +24,21 @@ struct is_finite<SmartFrameSurroundings> : std::true_type {};
 template<> Finite<SmartFrameSurroundings>::ValueList Finite<SmartFrameSurroundings>::values;
 template<> inline Type Attribute_<SmartFrameSurroundings>::staticType() { return Type::NAMES; }
 
+enum class ShowFrameDecorations {
+    none,
+    nonempty,
+    focused_if_multiple,
+    focused,
+    if_multiple,
+    all,
+};
+
+template <>
+struct is_finite<ShowFrameDecorations> : std::true_type {};
+template<> Finite<ShowFrameDecorations>::ValueList Finite<ShowFrameDecorations>::values;
+template<> inline Type Attribute_<ShowFrameDecorations>::staticType() { return Type::NAMES; }
+
+
 class Settings : public Object {
 public:
     using string = std::string;
@@ -58,6 +73,7 @@ public:
     Attribute_<int>           frame_normal_opacity = {"frame_normal_opacity", 100};
     Attribute_<bool>          focus_crosses_monitor_boundaries = {"focus_crosses_monitor_boundaries", true};
     Attribute_<bool>          always_show_frame = {"always_show_frame", false};
+    Attribute_<ShowFrameDecorations> show_frame_decorations = {"show_frame_decorations", ShowFrameDecorations::focused_if_multiple};
     Attribute_<bool>          default_direction_external_only = {"default_direction_external_only", false};
     Attribute_<LayoutAlgorithm> default_frame_layout = {"default_frame_layout", LayoutAlgorithm::vertical};
     Attribute_<bool>          focus_follows_mouse = {"focus_follows_mouse", false};
