@@ -932,14 +932,18 @@ class X11:
         geom.y = y
         return geom
 
-    def get_hlwm_frames(self):
+    def get_hlwm_frames(self, only_visible=False):
         """get list of window handles of herbstluftwm
         frame decoration windows"""
-        cmd = ['xdotool', 'search', '--class', '_HERBST_FRAME']
+        cmd = ['xdotool', 'search']
+        if only_visible:
+            cmd += ['--onlyvisible']
+        cmd += ['--class', '_HERBST_FRAME']
         frame_wins = subprocess.run(cmd,
                                     stdout=subprocess.PIPE,
-                                    universal_newlines=True,
-                                    check=True)
+                                    universal_newlines=True)
+        # we need to ignore the exit code, because xdotool returns exit
+        # code 1 if no windows were found.
         res = []
         for winid_decimal_str in frame_wins.stdout.splitlines():
             res.append(self.window(winid_decimal_str))
